--- a/main.css
+++ b/main.css
@@ -4,9 +4,14 @@
     box-sizing: border-box;
 }
 body {
- background-image: url ("images/background.png"); no-repeat fixed top right
+ background: url("background.png") no-repeat top right fixed;
 }
 #container {
  width: 800px;
  margin: 0 auto;
+}
+.left{
+    width:48px;
+    height:200px;
+    background-color: rgba (255,255,255,0.5);
 }
