--- a/main.css
+++ b/main.css
@@ -55,7 +55,7 @@ footer a:link{
     text-decoration: none;
 }
 .right a :visited{
-    color: #3F3F2C;
+    color: #958360;
 }
 body {
     font-family: "Microsoft YaHei",微软雅黑,宋体,Arial, Helvetica, sans-serif;
